feat(velero): add velero backup system
wip: add minio

--- a/cluster/base/cluster-secrets.sops.yaml
+++ b/cluster/base/cluster-secrets.sops.yaml
@@ -60,6 +60,8 @@ stringData:
     TOOLS_PASSBOLT_CAKE_PASSWORD: ENC[AES256_GCM,data:3K2ZLswgyzsYA4iEShwIGvSt,iv:nl7xLYS+zw53PiuNPFkZdXDUrdQ7r8heYGi1mBczUrA=,tag:OhPw9IP3xy5JAm6gYKZ1xw==,type:str]
     TOOLS_PASSBOLT_EMAIL_PASSWORD: ENC[AES256_GCM,data:4UBtLsxAjp1yU0eKm0da,iv:Do4NIHp0wJim3uDVbjsZ1cLqNmSnmjhhGZ/cf7XovV4=,tag:OCgW8MkPizxh55LOlHn/1A==,type:str]
     TOOLS_RUSTDESK_RELAY: ENC[AES256_GCM,data:LWBypvtCssUfObYYHoDV2w==,iv:n2Q+ZchiHxotVUYeofhc92LuY9RoF+aqr34zXcuDvR4=,tag:nbeLNp1wf59UoDjq6/JFqQ==,type:str]
+    #ENC[AES256_GCM,data:HX1pmQolnA==,iv:QlHZbXuJiVeab546kRMHhqxwCeNmdkF+yW90poaev4Q=,tag:vlLhSHq4qsVsAw0UERUG2Q==,type:comment]
+    VELERO_MINIO_ADMIN_PASSWORD: ENC[AES256_GCM,data:j+HTwiymbOy3AF0K,iv:96Y/mSIeqrXlkM11bcfL+hIvZ7+ey1xG/AIh1V04Izs=,tag:8U1YtK3qHjnTEz+QoD1qdQ==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -75,8 +77,8 @@ sops:
             eEFSeGV3NHVBV0JXSnozbHpUaEtIbVUK6kmKX20QI1xvPOluAwA52XRqYrLB/k88
             wl6PHYbwI2EKrqXzWUtPkILBUORr1i+2NaFOO6cvnI5lWSMvnc/YNw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-11-08T20:45:15Z"
-    mac: ENC[AES256_GCM,data:ZuoN8TyKWeL5eJ2vDTFy6kgS951NMLgmNVMt9s3jH5Yewclki7LoqnX8TaquL8m6vqDud/r5Kcx1UhuvS+zNiBulaYNKUSILaL2Bxm9pwJLJl3Elqk82hCK5fRlTdv7+v5D/Y232i3+nY6g6tBGP0Xs6IEzIdPEnqTyM4R9ljtY=,iv:Pa7nzzIGiRzIgRfi8si7y0/aXhvy0l4T9PL4Szs9gqU=,tag:Qg3G2eK6oR9tJlBuE8s1nA==,type:str]
+    lastmodified: "2024-12-25T16:57:32Z"
+    mac: ENC[AES256_GCM,data:yUy4/rDsv8q+HdhBy+B1xOxUczwmE3PPSrIqU8SQnyoio4Wsyi/ROqT1/2TX+E8zeLI7ZEe9fFSxZxX4KRaSPNT0oKJQxOxCieI6aBsMl/jjH3PgLBdTk1LixiqxAyvv0XqMQ2Z5SV3QM+sEWK9Igb6RNBXn0eJ+rTXxhgbMVjk=,iv:nzfevQ02Rx5256upWGVT2TZ2bSDLMPF0hImwxBoKAC4=,tag:7exbRkBK9Ou/ZqJ5YGcsQw==,type:str]
     pgp: []
     encrypted_regex: ((?i)(Pass|pass|secret($|[^N])|key|token|^data$|^stringData))
     version: 3.9.0
