--- a/cluster/base/core.yaml
+++ b/cluster/base/core.yaml
@@ -21,5 +21,7 @@ spec:
     substituteFrom:
       - kind: ConfigMap
         name: cluster-settings
+        optional: false
       - kind: Secret
         name: cluster-secrets
+        optional: false
