--- a/cluster/apps/home/ollama/kustomization.yaml
+++ b/cluster/apps/home/ollama/kustomization.yaml
@@ -3,4 +3,6 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - pvc.yaml
+  - pvc-web.yaml
   - helm-release.yaml
+  - hr-open-webui.yaml
