--- a/cluster/apps/home/emqx/pvc.yaml
+++ b/cluster/apps/home/emqx/pvc.yaml
@@ -18,7 +18,7 @@ spec:
             - key: kubernetes.io/hostname
               operator: In
               values:
-                - romeo
+                - rpi4-poe-3
 
 ---
 apiVersion: v1
