minecraft(cwh11-broville): deploy

--- a/cluster/apps/games/minecraft/kustomization.yaml
+++ b/cluster/apps/games/minecraft/kustomization.yaml
@@ -4,6 +4,7 @@ resources:
   - bungeecord
   # - cwh11
   # - cwh11-archive
+  - cwh11-broville
   # - superdigdug
   # - superdigdug-overworld
   # - superdigdug-sparks
