--- a/cluster/apps/games/minecraft/cwh11-broville/helm-release.yaml
+++ b/cluster/apps/games/minecraft/cwh11-broville/helm-release.yaml
@@ -28,8 +28,8 @@ spec:
         cpu: 2000m
     minecraftServer:
       eula: "TRUE"
-      version: "1.21.4"
-      type: SPIGOT
+      version: "1.21.3"
+      type: PAPER
       motd: "cwh11.mc.sparks.codes"
       difficulty: normal
       ops: "superdigdug"
