--- a/cluster/apps/games/minecraft/kustomization.yaml
+++ b/cluster/apps/games/minecraft/kustomization.yaml
@@ -1,7 +1,8 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - bungeecord
+  - velocity-proxy
+  # - bungeecord
   # - cwh11
   # - cwh11-archive
   - cwh11-broville
