--- a/cluster/apps/games/minecraft/superdigdug-overworld/helm-release.yaml
+++ b/cluster/apps/games/minecraft/superdigdug-overworld/helm-release.yaml
@@ -29,7 +29,7 @@ spec:
     minecraftServer:
       eula: "TRUE"
       version: "1.20.4"
-      type: SPIGOT
+      type: PAPER
       motd: "superdigdug-overworld.mc.sparks.codes"
       difficulty: normal
       ops: "superdigdug"
