--- a/cluster/apps/media/jellyfin/external-name.yaml
+++ b/cluster/apps/media/jellyfin/external-name.yaml
@@ -6,6 +6,7 @@ metadata:
   namespace: media
   annotations:
     external-dns.alpha.kubernetes.io/hostname: media.sparks.codes
+    external-dns.alpha.kubernetes.io/cloudflare-proxied: "false"
 spec:
   type: ExternalName
   externalName: sparks.codes
