--- a/cluster/base/cluster-secrets.sops.yaml
+++ b/cluster/base/cluster-secrets.sops.yaml
@@ -15,9 +15,7 @@ stringData:
     DATABASES_INFLUXDB_USER_PASSWORD: ENC[AES256_GCM,data:+x5uHCpesulzd258MxNFhg==,iv:8pHM/aVulb/vYtwFqGF/nSqomyu3RDlC0dYxxBvSlIo=,tag:dHQhQHGmNmzw5KJVz7Y5OA==,type:str]
     #ENC[AES256_GCM,data:5PA20FmU,iv:vlccTbe0MTNs8U88EiUTx2Htx7UcCFfxOZ1UpYkCzwY=,tag:huvq/iZ3Y+6CcaXc8xySOA==,type:comment]
     GAMES_MINECRAFT_BUNGEECORD_RCON_PASSWORD: ENC[AES256_GCM,data:ZznSEcJwbyTygEpsnsg=,iv:3lLTvnxg39Ju1JWWzK7UroHE+NAuV5irbdTo3LHrGfo=,tag:o0sxze5KI6oiZPwxEy5ExA==,type:str]
-    GAMES_FIVEM_TESTING_LICENSE_KEY: ENC[AES256_GCM,data:t7izVV68yetsIr71w4Pq2UnPO7ODopUXa3UjsHD42hk=,iv:nFAOhUk7XAeapPku649aR/d4D5Ns8MLx2QDWF9OM2Mw=,tag:/t3BfjNC4P00g6VVfdcxRA==,type:str]
-    GAMES_FIVEM_TESTING_DB_ROOT_PASSWORD: ENC[AES256_GCM,data:0Rlp+GpEunDSEfE=,iv:ZT9MdJKThh4bw/u71JGta++wUMhWYnhQ8r/k15NRd2Q=,tag:iKbtOMDuNb/TjawFFLsQxg==,type:str]
-    GAMES_FIVEM_TESTING_DB_PASSWORD: ENC[AES256_GCM,data:j1vHXBLMuKA=,iv:BITuNQKweEXRoWWSoHptwljoayGX1Sqo06cigktZsP0=,tag:Ro0bM+vv0MYD8jp8jKWgzw==,type:str]
+    GAMES_BEAMMP_AUTH_KEY: ENC[AES256_GCM,data:Cejj4BylzSd4e+eOFkfAsoGOm8fdJKQF9M5tusTAieRdwV20,iv:3NofInTs6yIYDBZ6RtYUgJMl7+CPdG994JTls+LDIwI=,tag:fQEVGChrIFP1pBsJ2lKTYA==,type:str]
     #ENC[AES256_GCM,data:ZYEVtKo0XZYX9sw=,iv:jGMw+JQt5hBZnbtn/owBNx8tVm/z43dKRiLBzma7KFQ=,tag:mCm3s4Nser+Pw/OrmsN/Jg==,type:comment]
     NETWORKING_PIHOLE_ADMIN_PASSWORD: ENC[AES256_GCM,data:DZ68L5CX,iv:coV+KULoTx0ldeayaDlSZ07p+ZlGQqS2YedszRrIUzM=,tag:WBdBlE94MIK1TXPElTnvqw==,type:str]
     #ENC[AES256_GCM,data:VuZdXME=,iv:TZz0vI1BRNSA0EkuR+/q3RyW9/x3hHJZ0loAzXVsaOc=,tag:GhRb+i60O2yZX034evcZtQ==,type:comment]
@@ -59,7 +57,7 @@ stringData:
     TOOLS_PASSBOLT_MARIADB_USER_PASSWORD: ENC[AES256_GCM,data:820/TFGWBMoz9SyadlzLig==,iv:SLghCH+3ptqVQiq6FWxIJR+fsjjISgtVTgiOewcPiWs=,tag:h7FsJ4RrBktMO6GvkyEOgg==,type:str]
     TOOLS_PASSBOLT_CAKE_PASSWORD: ENC[AES256_GCM,data:3K2ZLswgyzsYA4iEShwIGvSt,iv:nl7xLYS+zw53PiuNPFkZdXDUrdQ7r8heYGi1mBczUrA=,tag:OhPw9IP3xy5JAm6gYKZ1xw==,type:str]
     TOOLS_PASSBOLT_EMAIL_PASSWORD: ENC[AES256_GCM,data:4UBtLsxAjp1yU0eKm0da,iv:Do4NIHp0wJim3uDVbjsZ1cLqNmSnmjhhGZ/cf7XovV4=,tag:OCgW8MkPizxh55LOlHn/1A==,type:str]
-    TOOLS_RUSTDESK_RELAY: ENC[AES256_GCM,data:LWBypvtCssUfObYYHoDV2w==,iv:n2Q+ZchiHxotVUYeofhc92LuY9RoF+aqr34zXcuDvR4=,tag:nbeLNp1wf59UoDjq6/JFqQ==,type:str]
+    TOOLS_RUSTDESK_RELAY: ENC[AES256_GCM,data:rpfCaI0PusKYE9c8BSKtIj49YnhwhZMBtg==,iv:FXwWtbY2AeO8Y6tGiTmXFRoIrMisXedtuMz9EEjucfk=,tag:fe4OH3xjXp9KOaLqCYwsqg==,type:str]
     #ENC[AES256_GCM,data:HX1pmQolnA==,iv:QlHZbXuJiVeab546kRMHhqxwCeNmdkF+yW90poaev4Q=,tag:vlLhSHq4qsVsAw0UERUG2Q==,type:comment]
     VELERO_MINIO_ADMIN_PASSWORD: ENC[AES256_GCM,data:j+HTwiymbOy3AF0K,iv:96Y/mSIeqrXlkM11bcfL+hIvZ7+ey1xG/AIh1V04Izs=,tag:8U1YtK3qHjnTEz+QoD1qdQ==,type:str]
 sops:
@@ -77,8 +75,8 @@ sops:
             eEFSeGV3NHVBV0JXSnozbHpUaEtIbVUK6kmKX20QI1xvPOluAwA52XRqYrLB/k88
             wl6PHYbwI2EKrqXzWUtPkILBUORr1i+2NaFOO6cvnI5lWSMvnc/YNw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-12-25T16:57:32Z"
-    mac: ENC[AES256_GCM,data:yUy4/rDsv8q+HdhBy+B1xOxUczwmE3PPSrIqU8SQnyoio4Wsyi/ROqT1/2TX+E8zeLI7ZEe9fFSxZxX4KRaSPNT0oKJQxOxCieI6aBsMl/jjH3PgLBdTk1LixiqxAyvv0XqMQ2Z5SV3QM+sEWK9Igb6RNBXn0eJ+rTXxhgbMVjk=,iv:nzfevQ02Rx5256upWGVT2TZ2bSDLMPF0hImwxBoKAC4=,tag:7exbRkBK9Ou/ZqJ5YGcsQw==,type:str]
+    lastmodified: "2025-01-02T23:07:11Z"
+    mac: ENC[AES256_GCM,data:8pdI2WUWPg4YrgCuK46jnq2zvG8/WNqM5HLUaGcpHbn2s3FdpuX3pZf3hu14tA+Y2p1g5lwJCIAdcZGC3iHZLi1cUJJo53SEDV/9ACo1fpvgfos1uBexVyXZm/RWy2kyY7/vPrGHSNvdIwkkwc9H01E7QXVVy4OhPdBgjgTtyU8=,iv:3+PmO8xMDYqC0OWRwsTbmxpVbMlbFy6liGJw/rahwgM=,tag:mWpVsjCD8NrZFSaDsaDzKg==,type:str]
     pgp: []
     encrypted_regex: ((?i)(Pass|pass|secret($|[^N])|key|token|^data$|^stringData))
     version: 3.9.0
