--- a/cluster/apps/games/beammp/cwh11/kustomization.yaml
+++ b/cluster/apps/games/beammp/cwh11/kustomization.yaml
@@ -1,5 +1,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - minecraft
-  - beammp
+  - helm-release.yaml
+  - external-name.yaml
+  - pvc.yaml
