--- a/cluster/apps/home/ollama/helm-release.yaml
+++ b/cluster/apps/home/ollama/helm-release.yaml
@@ -43,8 +43,27 @@ spec:
     service:
       main:
         controller: main
-        type: LoadBalancer
-        loadBalancerIP: 10.10.201.14
         ports:
           http:
             port: 11434
+    ingress:
+      main:
+        enabled: true
+        className: nginx-internal
+        annotations:
+          hajimari.io/enable: "false"
+          hajimari.io/icon: cloud-search
+          hajimari.io/info: "Ollama Runner"
+          hajimari.io/targetBlank: "true"
+        hosts:
+          - host: &host "ollama.sparks.codes"
+            paths:
+              - path: /
+                pathType: Prefix
+                service:
+                  identifier: main
+                  port: http
+        tls:
+          - secretName: acme-crt-secret-sparks-codes
+            hosts:
+              - *host
