--- a/cluster/core/namespaces/kustomization.yaml
+++ b/cluster/core/namespaces/kustomization.yaml
@@ -9,6 +9,7 @@ resources:
   - games.yaml
   - gitlab.yaml
   - home.yaml
+  - kyverno.yaml
   - media.yaml
   - metallb-system.yaml
   - monitoring.yaml
