--- a/cluster/core/validation/kyverno/helm-release.yaml
+++ b/cluster/core/validation/kyverno/helm-release.yaml
@@ -3,7 +3,7 @@ apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
   name: kyverno
-  namespace: kyverno
+  namespace: default
 spec:
   interval: 5m
   chart:
@@ -19,7 +19,7 @@ spec:
     timeout: 10m
     replace: true
     crds: CreateReplace
-    createNamespace: false
+    createNamespace: true
     remediation:
       retries: 3
   upgrade:
