open-webui: always pull latest image

--- a/cluster/apps/home/ollama/hr-open-webui.yaml
+++ b/cluster/apps/home/ollama/hr-open-webui.yaml
@@ -27,6 +27,7 @@ spec:
             image:
               repository: ghcr.io/open-webui/open-webui
               tag: "main"
+              pullPolicy: Always
             env:
               TZ: "America/Chicago"
               ENV: dev
