--- a/cluster/apps/home/ollama/pvc.yaml
+++ b/cluster/apps/home/ollama/pvc.yaml
@@ -18,7 +18,7 @@ spec:
             - key: kubernetes.io/hostname
               operator: In
               values:
-                - kappa
+                - beta
 
 ---
 apiVersion: v1
