--- a/cluster/apps/tools/ollama/pvc.yaml
+++ b/cluster/apps/tools/ollama/pvc.yaml
@@ -25,7 +25,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: ollama-pvc
-  namespace: home
+  namespace: tools
 spec:
   volumeName: ollama-pv
   accessModes:
