--- a/cluster/apps/tools/ollama/hr-open-webui.yaml
+++ b/cluster/apps/tools/ollama/hr-open-webui.yaml
@@ -2,8 +2,8 @@
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: ollama
-  namespace: home
+  name: ollama-webui
+  namespace: tools
 spec:
   interval: 15m
   chart:
@@ -17,7 +17,7 @@ spec:
       interval: 15m
   values:
     defaultPodOptions:
-      runtimeClassName: nvidia
+      # runtimeClassName: nvidia
       nodeSelector:
         kubernetes.io/hostname: beta
     controllers:
@@ -25,39 +25,37 @@ spec:
         containers:
           main:
             image:
-              repository: ollama/ollama
-              tag: "0.5.5"
+              repository: ghcr.io/open-webui/open-webui
+              tag: "main"
+              pullPolicy: Always
             env:
               TZ: "America/Chicago"
-            resources:
-              requests:
-                nvidia.com/gpu: 2
-              limits:
-                nvidia.com/gpu: 2
+              ENV: dev
+              OLLAMA_BASE_URL: "https://ollama.sparks.codes"
     persistence:
       config:
         enabled: true
-        existingClaim: ollama-pvc
+        existingClaim: ollama-web-pvc
         globalMounts:
-          - path: /root/.ollama
+          - path: /app/backend/data
     service:
       main:
         controller: main
+        type: ClusterIP
         ports:
           http:
-            port: 11434
+            port: 8080
     ingress:
       main:
         enabled: true
         className: nginx-internal
         annotations:
-          nginx.ingress.kubernetes.io/proxy-read-timeout: "240"
-          hajimari.io/enable: "false"
+          hajimari.io/enable: "true"
           hajimari.io/icon: cloud-search
-          hajimari.io/info: "Ollama Runner"
+          hajimari.io/info: "Ollama frontend"
           hajimari.io/targetBlank: "true"
         hosts:
-          - host: &host "ollama.sparks.codes"
+          - host: &host "ollama-webui.sparks.codes"
             paths:
               - path: /
                 pathType: Prefix
