--- a/cluster/apps/home/esphome/helm-release.yaml
+++ b/cluster/apps/home/esphome/helm-release.yaml
@@ -39,6 +39,22 @@ spec:
               TZ: "America/Chicago"
               ESPHOME_DASHBOARD_USE_PING: "true"
               ESPHOME_DASHBOARD_RELATIVE_URL: "/"
+      code:
+        containers:
+          code:
+            image:
+              repository: ghcr.io/coder/code-server
+              tag: 4.96.2
+            args:
+              - --auth
+              - "none"
+              - --user-data-dir
+              - "/config/.vscode"
+              - --extensions-dir
+              - "/config/.vscode"
+              - --port
+              - "8081"
+              - "/config"
     persistence:
       config:
         enabled: true
@@ -51,6 +67,12 @@ spec:
         ports:
           http:
             port: 6052
+      code:
+        type: ClusterIP
+        controller: code
+        ports:
+          http:
+            port: 8081
     ingress:
       main:
         enabled: true
@@ -74,3 +96,22 @@ spec:
           - secretName: acme-crt-secret-sparks-codes
             hosts:
               - esphome.sparks.codes
+      code:
+        enabled: true
+        className: nginx-internal
+        annotations:
+          nginx.ingress.kubernetes.io/auth-type: basic
+          nginx.ingress.kubernetes.io/auth-secret: codeserver-auth-secret
+          nginx.ingress.kubernetes.io/auth-realm: "Authentication Required"
+        hosts:
+          - host: &host "codeserver-esphome.sparks.codes"
+            paths:
+              - path: /
+                pathType: Prefix
+                service:
+                  identifier: code
+                  port: http
+        tls:
+          - secretName: acme-crt-secret-sparks-codes
+            hosts:
+              - *host
