--- a/cluster/apps/tools/kustomization.yaml
+++ b/cluster/apps/tools/kustomization.yaml
@@ -4,7 +4,7 @@ kind: Kustomization
 resources:
   - littlelink
   - mailserver
-  - ml-workspace
+  # - ml-workspace
   - netboot.xyz
   - ntfy
   - ollama
