--- a/cluster/apps/tools/ml-workspace/secret.sops.yaml
+++ b/cluster/apps/tools/ml-workspace/secret.sops.yaml
@@ -1,7 +1,6 @@
 apiVersion: v1
 data:
-    WORKSPACE_AUTH_PASSWORD: ENC[AES256_GCM,data:n/az7b+01Kc8PN01dGQh/g==,iv:39RRuwubMnc7tSskhosz/iF0ikRjA3SykiaSqMmxc9I=,tag:pGXhA9plDYfsL5tkr90GPg==,type:str]
-    WORKSPACE_AUTH_USER: ENC[AES256_GCM,data:r2E6lI7ScBk=,iv:cKTrrHEi6goDaFrLdjeirk5141Py24+57nTsELxyxmE=,tag:vvVp36Dw86EmRxss7bEsrg==,type:str]
+    JUPYTER_TOKEN: ENC[AES256_GCM,data:P7FQPWUa9onKmmcLlkWKag==,iv:+mxgFes6XVwKCy5WEic/sGYe6tlNsy6XsUlOhKPaG0Q=,tag:SgWtP/m/uIDz+YOQrF9zeQ==,type:str]
 kind: Secret
 metadata:
     creationTimestamp: null
@@ -22,8 +21,8 @@ sops:
             d3NzbUdaalVKekd1RlNoUTRCd2t1b1UKImJrWLwwqa3rH8nhoH5aNrQDB3nkV+zF
             lSiB5bVr6ChHCu4swdFZSqSMbGdfhdvedgldrzXAJGHawohE1APf9g==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-01-23T20:24:52Z"
-    mac: ENC[AES256_GCM,data:nOEJG9et89LJnd96fzbIRpnCLsP71z8M6xJqcqvH58GtIBauyxkgpy+Nrrfjc0238MX5JCiBHZ5LZKfNsaql4ik7ivF8ecLVeri8Tw08EPebFusZTbkZfPM0IsqNXuxlbKq9PRztjM/Rwq/vxH2LXiVLBhiL6EZXhfy6yhr+lpw=,iv:I/8q/yk8gZZHhVFlD2Mu81FzYcXXFwYZl3OqkuC78zU=,tag:BQRXEoqbj55SMMWCiPJ+Dw==,type:str]
+    lastmodified: "2025-01-26T18:46:12Z"
+    mac: ENC[AES256_GCM,data:JPzhUfWunoIyIDF5iCDGkgIEjsM2GEow/h8fIx8TWIatovWw2AUI1G5cpqbaFBIU5vZHLYGPunJBZ9X6vLdg4NMrDvApQi7ifaf7WfGE5x098Fey7jwbLQei5acTmAaH+XxiBky6pAPFoV8lXEhQCaNb/YPakTrPZLatPCoE2to=,iv:ujUuy2NZL1kCY040EvBzHrF3ajnx3+4KNsz+DdspWpI=,tag:hc69BJJDGe+tNy/eT+dzvg==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
-    version: 3.7.3
+    version: 3.8.1
