jupyter-lab: enable with 8gi shared memory

--- a/cluster/apps/tools/jupyter-lab/helm-release.yaml
+++ b/cluster/apps/tools/jupyter-lab/helm-release.yaml
@@ -17,6 +17,7 @@ spec:
       interval: 15m
   values:
     defaultPodOptions:
+      runtimeClassName: "nvidia"
       securityContext:
         runAsUser: 0
         runAsGroup: 0
@@ -77,3 +78,10 @@ spec:
         retain: true
         globalMounts:
           - path: /home/jovyan/Notebooks
+      shm:
+        enabled: true
+        type: emptyDir
+        medium: Memory
+        sizeLimit: 8Gi
+        globalMounts:
+          - path: /dev/shm
