--- a/cluster/apps/tools/kustomization.yaml
+++ b/cluster/apps/tools/kustomization.yaml
@@ -4,10 +4,10 @@ kind: Kustomization
 resources:
   - littlelink
   - mailserver
-  # - ml-workspace
   - netboot.xyz
   - ntfy
   - ollama
+  - jupyter-lab
   - hajimari
   - homebox
   - shlink
