--- a/cluster/apps/tools/ollama/helm-release.yaml
+++ b/cluster/apps/tools/ollama/helm-release.yaml
@@ -31,6 +31,7 @@ spec:
               TZ: "America/Chicago"
               CUDA_ERROR_LEVEL: "50"
               OLLAMA_DEBUG: 1
+              NVIDIA_VISIBLE_DEVICES: "0"
             resources:
               requests:
                 nvidia.com/gpu: 1
