ollama,jupyter: attempt to share 1 gpu

--- a/cluster/apps/tools/jupyter-lab/helm-release.yaml
+++ b/cluster/apps/tools/jupyter-lab/helm-release.yaml
@@ -38,9 +38,10 @@ spec:
               - secret: ml-workspace-creds
             resources:
               requests:
-                nvidia.com/gpu: 1
+                # nvidia.com/gpu: 1
+                nvidia.com/gpu.shared: 1
               limits:
-                nvidia.com/gpu: 1
+                nvidia.com/gpu.shared: 1
     service:
       main:
         controller: main
