Revert "ollama,jupyter: attempt to share 1 gpu"
This reverts commit e5df28a30278008008e9d3f764c29a42fb7f4c87.

--- a/cluster/apps/tools/jupyter-lab/helm-release.yaml
+++ b/cluster/apps/tools/jupyter-lab/helm-release.yaml
@@ -38,10 +38,9 @@ spec:
               - secret: ml-workspace-creds
             resources:
               requests:
-                # nvidia.com/gpu: 1
-                nvidia.com/gpu.shared: 1
+                nvidia.com/gpu: 1
               limits:
-                nvidia.com/gpu.shared: 1
+                nvidia.com/gpu: 1
     service:
       main:
         controller: main
