--- a/provision/ansible/inventory/clients.yaml
+++ b/provision/ansible/inventory/clients.yaml
@@ -35,7 +35,7 @@ all:
         beta.sparks.codes:
         tango.sparks.codes:
         omega.sparks.codes:
-        # lambda.sparks.codes:
+        lambda.sparks.codes:
         rpi4-poe-1.sparks.codes:
         rpi4-poe-2.sparks.codes:
         rpi4-poe-3.sparks.codes:
