cloudflare-ingress: change external names and ingresses to cloudflare tunnel

--- a/cluster/apps/home/home-assistant/helm-release.yaml
+++ b/cluster/apps/home/home-assistant/helm-release.yaml
@@ -82,7 +82,7 @@ spec:
     ingress:
       main:
         enabled: true
-        className: "nginx-external"
+        className: "cloudflare-tunnel"
         annotations:
           hajimari.io/enable: "true"
           hajimari.io/appName: "Home Assistant"
