--- a/cluster/apps/home/home-assistant/kustomization.yaml
+++ b/cluster/apps/home/home-assistant/kustomization.yaml
@@ -5,5 +5,5 @@ resources:
   - pvc.yaml
   - pvc-media.yaml
   - helm-release.yaml
-  - external-name.yaml
+  # - external-name.yaml
   - codeserver-auth-secret.sops.yaml
