--- a/cluster/apps/tools/uptime-kuma/helm-release.yaml
+++ b/cluster/apps/tools/uptime-kuma/helm-release.yaml
@@ -34,7 +34,7 @@ spec:
     ingress:
       main:
         enabled: true
-        className: nginx-external
+        className: cloudflare-tunnel
         annotations:
           nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
           nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
