--- a/cluster/apps/games/minecraft/cwh11/kustomization.yaml
+++ b/cluster/apps/games/minecraft/cwh11/kustomization.yaml
@@ -2,5 +2,5 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - helm-release.yaml
-  - external-name.yaml
+  # - external-name.yaml
   - pvc.yaml
