--- a/cluster/apps/games/minecraft/superdigdug-wilderness/kustomization.yaml
+++ b/cluster/apps/games/minecraft/superdigdug-wilderness/kustomization.yaml
@@ -3,5 +3,5 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - helm-release.yaml
-  - external-name.yaml
+  # - external-name.yaml
   - pvc.yaml
