--- a/cluster/apps/gitlab/helm-release.yaml
+++ b/cluster/apps/gitlab/helm-release.yaml
@@ -31,7 +31,7 @@ spec:
         domain: iwrite.software
       ingress:
         configureCertmanager: false
-        class: nginx-external
+        class: cloudflare-tunnel
         tls:
           enabled: true
           secretName: acme-crt-secret-iwrite-software
