--- a/cluster/apps/media/filebrowser/helm-release.yaml
+++ b/cluster/apps/media/filebrowser/helm-release.yaml
@@ -60,7 +60,7 @@ spec:
     ingress:
       main:
         enabled: true
-        className: "nginx-external"
+        className: "cloudflare-tunnel"
         annotations:
           hajimari.io/enable: "true"
           hajimari.io/appName: "File Browser"
