--- a/cluster/apps/nginx/helm.imake.software/deployment.yaml
+++ b/cluster/apps/nginx/helm.imake.software/deployment.yaml
@@ -52,7 +52,7 @@ metadata:
   name: ingress-nginx-helm-repo
   namespace: nginx
   annotations:
-    kubernetes.io/ingress.class: "nginx-external"
+    kubernetes.io/ingress.class: "cloudflare-tunnel"
 spec:
   tls:
     - hosts:
