--- a/cluster/apps/security/2FAuth/helm-release.yaml
+++ b/cluster/apps/security/2FAuth/helm-release.yaml
@@ -169,7 +169,7 @@ spec:
     ingress:
       main:
         enabled: true
-        className: "nginx-external"
+        className: "cloudflare-tunnel"
         annotations:
           hajimari.io/enable: "true"
           hajimari.io/appName: "2FAuth"
