--- a/cluster/apps/tools/ntfy/helm-release.yaml
+++ b/cluster/apps/tools/ntfy/helm-release.yaml
@@ -36,7 +36,7 @@ spec:
     ingress:
       main:
         enabled: true
-        className: nginx-external
+        className: cloudflare-tunnel
         annotations:
           hajimari.io/enable: "true"
           hajimari.io/appName: "Notify"
