--- a/cluster/apps/tools/shlink/helm-release.yaml
+++ b/cluster/apps/tools/shlink/helm-release.yaml
@@ -56,7 +56,7 @@ spec:
     ingress:
       main:
         enabled: true
-        className: nginx-external
+        className: cloudflare-tunnel
         annotations:
           hajimari.io/enable: "true"
           hajimari.io/appName: "Shlink"
