--- a/cluster/crds/kustomization.yaml
+++ b/cluster/crds/kustomization.yaml
@@ -3,6 +3,6 @@ kind: Kustomization
 resources:
   - cert-manager
   - external-dns
-  - external-snapshotter
+  # - external-snapshotter
   # - metallb
   - rook-ceph
