gitlab: add internal ingress

--- a/cluster/core/networking/kustomization.yaml
+++ b/cluster/core/networking/kustomization.yaml
@@ -6,5 +6,5 @@ resources:
   - cloudflare-ingress
   - external-dns
   - metallb
-  - nginx-ingress-external
+  # - nginx-ingress-external
   - nginx-ingress-internal
