minecraft: deploy bluemap

--- a/cluster/apps/games/minecraft/cwh11-broville/external-name.yaml
+++ b/cluster/apps/games/minecraft/cwh11-broville/external-name.yaml
@@ -2,10 +2,10 @@
 kind: Service
 apiVersion: v1
 metadata:
-  name: cwh11-mc-sparks-codes
+  name: cwh11-broville-mc-sparks-codes
   namespace: games
   annotations:
-    external-dns.alpha.kubernetes.io/hostname: cwh11.mc.sparks.codes
+    external-dns.alpha.kubernetes.io/hostname: cwh11-broville.mc.sparks.codes
     external-dns.alpha.kubernetes.io/cloudflare-proxied: "false"
 spec:
   type: ExternalName
