--- a/cluster/apps/games/minecraft/bluemap-renderdata-pvc.yaml
+++ b/cluster/apps/games/minecraft/bluemap-renderdata-pvc.yaml
@@ -2,15 +2,15 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: local-mc-cwh11-archive
+  name: local-mc-bluemap-renderdata
 spec:
   accessModes:
     - ReadWriteMany
   capacity:
-    storage: 45Gi
+    storage: 100Gi
   persistentVolumeReclaimPolicy: Retain
   local:
-    path: /mnt/static/mc.sparks.codes/cwh11-archive
+    path: /mnt/static/mc.sparks.codes/bluemap-renderdata
   nodeAffinity:
     required:
       nodeSelectorTerms:
@@ -24,13 +24,13 @@ spec:
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: local-mc-cwh11-archive
+  name: local-mc-bluemap-renderdata
   namespace: games
 spec:
-  volumeName: local-mc-cwh11-archive
+  volumeName: local-mc-bluemap-renderdata
   accessModes:
     - ReadWriteMany
   storageClassName: ""
   resources:
     requests:
-      storage: 45Gi
+      storage: 100Gi
