--- a/cluster/apps/games/minecraft/bungeecord/pvc.yaml
+++ b/cluster/apps/games/minecraft/bungeecord/pvc.yaml
@@ -5,7 +5,7 @@ metadata:
   name: local-mc-bungee
 spec:
   accessModes:
-    - ReadWriteOnce
+    - ReadWriteMany
   capacity:
     storage: 512Mi
   persistentVolumeReclaimPolicy: Retain
@@ -29,7 +29,7 @@ metadata:
 spec:
   volumeName: local-mc-bungee
   accessModes:
-    - ReadWriteOnce
+    - ReadWriteMany
   storageClassName: ""
   resources:
     requests:
