--- a/cluster/apps/games/minecraft/cwh11-original/helm-release.yaml
+++ b/cluster/apps/games/minecraft/cwh11-original/helm-release.yaml
@@ -2,7 +2,7 @@
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: minecraft-cwh11
+  name: minecraft-cwh11-original
   namespace: games
 spec:
   interval: 15m
@@ -30,23 +30,23 @@ spec:
       eula: "TRUE"
       version: "1.21.4"
       type: PAPER
-      motd: "cwh11.mc.sparks.codes"
+      motd: "cwh11-original.mc.sparks.codes"
       difficulty: normal
       ops: "superdigdug"
-      worldSaveName: world
+      worldSaveName: world_cwh11
       maxPlayers: 20
       viewDistance: 14
-      levelSeed: ""
+      levelSeed: "-6121001965162030037"
       gameMode: survival
       pvp: true
       onlineMode: false
       memory: 6144M
       serviceType: LoadBalancer
-      loadBalancerIP: 10.10.202.1
+      loadBalancerIP: 10.10.202.4
       rcon:
         enabled: true
         password: ${GAMES_MINECRAFT_BUNGEECORD_RCON_PASSWORD}
     persistence:
       dataDir:
         enabled: true
-        existingClaim: local-mc-cwh11
+        existingClaim: local-mc-cwh11-archive
