--- a/cluster/apps/games/minecraft/cwh11-original/pvc.yaml
+++ b/cluster/apps/games/minecraft/cwh11-original/pvc.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: local-mc-cwh11-archive
+  name: local-mc-cwh11-original
 spec:
   accessModes:
     - ReadWriteMany
@@ -10,7 +10,7 @@ spec:
     storage: 45Gi
   persistentVolumeReclaimPolicy: Retain
   local:
-    path: /mnt/static/mc.sparks.codes/cwh11-archive
+    path: /mnt/static/mc.sparks.codes/cwh11-original
   nodeAffinity:
     required:
       nodeSelectorTerms:
@@ -24,10 +24,10 @@ spec:
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: local-mc-cwh11-archive
+  name: local-mc-cwh11-original
   namespace: games
 spec:
-  volumeName: local-mc-cwh11-archive
+  volumeName: local-mc-cwh11-original
   accessModes:
     - ReadWriteMany
   storageClassName: ""
