--- a/cluster/apps/games/minecraft/cwh11/kustomization.yaml
+++ b/cluster/apps/games/minecraft/cwh11/kustomization.yaml
@@ -1,6 +1,8 @@
+---
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - helm-release.yaml
+  # - helm-release.yaml
   # - external-name.yaml
+  - hr-bluemap.yaml
   - pvc.yaml
