--- a/cluster/apps/games/minecraft/cwh11/pvc.yaml
+++ b/cluster/apps/games/minecraft/cwh11/pvc.yaml
@@ -5,7 +5,7 @@ metadata:
   name: local-mc-cwh11
 spec:
   accessModes:
-    - ReadWriteOnce
+    - ReadWriteMany
   capacity:
     storage: 45Gi
   persistentVolumeReclaimPolicy: Retain
@@ -29,7 +29,7 @@ metadata:
 spec:
   volumeName: local-mc-cwh11
   accessModes:
-    - ReadWriteOnce
+    - ReadWriteMany
   storageClassName: ""
   resources:
     requests:
