--- a/cluster/apps/games/minecraft/superdigdug-newlands/pvc.yaml
+++ b/cluster/apps/games/minecraft/superdigdug-newlands/pvc.yaml
@@ -5,7 +5,7 @@ metadata:
   name: local-mc-superdigdug-newlands
 spec:
   accessModes:
-    - ReadWriteOnce
+    - ReadWriteMany
   capacity:
     storage: 25Gi
   persistentVolumeReclaimPolicy: Retain
@@ -29,7 +29,7 @@ metadata:
 spec:
   volumeName: local-mc-superdigdug-newlands
   accessModes:
-    - ReadWriteOnce
+    - ReadWriteMany
   storageClassName: ""
   resources:
     requests:
