--- a/cluster/apps/games/minecraft/superdigdug/kustomization.yaml
+++ b/cluster/apps/games/minecraft/superdigdug/kustomization.yaml
@@ -2,6 +2,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - helm-release.yaml
+  # - helm-release.yaml
   # - external-name.yaml
+  - hr-bluemap.yaml
   - pvc.yaml
